--- a/MyLayout/zh-Hans.lproj/Localizable.strings
+++ b/MyLayout/zh-Hans.lproj/Localizable.strings
@@ -8,36 +8,40 @@
 
 //Category
 "Category"="目录";
-"1.MyLinearLayout - Vert&Horz" = "1线性布局-垂直布局和水平布局";
-"2.MyLinearLayout - Combine with UIScrollView" = "2线性布局-和UIScrollView的结合";
-"3.MyLinearLayout - Gravity&Fill" = "3线性布局-子视图的停靠和填充";
-"4.MyLinearLayout - Wrap content" = "4线性布局-布局尺寸由子视图决定";
-"5.MyLinearLayout - Weight & Relative margin" = "5线性布局-子视图尺寸由布局决定";
-"6.MyLinearLayout - Size limit & Flexed margin" = "6线性布局-子视图之间的浮动间距";
-"7.MyLinearLayout - Average size&spacing" = "7线性布局-均分子视图尺寸和间距";
-"8.MyFrameLayout - Gravity&Fill" = "8框架布局-子视图在布局各方位停靠";
-"9.MyFrameLayout - Complex UI" = "9框架布局-复杂的界面布局";
-"10.MyRelativeLayout - Constraint&Dependence" = "10相对布局-子视图之间的约束依赖";
-"11.MyRelativeLayout - Prorate size" = "11相对布局-子视图的尺寸按比例分配";
-"12.MyRelativeLayout - Centered" = "12相对布局-子视图整体居中";
-"13.MyTableLayout - Vert" = "13表格布局-垂直表格";
-"14.MyTableLayout - Waterfall(Horz)" = "14表格布局-水平表格实现瀑布流";
-"15.MyTableLayout - Intelligent borderLine" = "15表格布局-表格和智能边界线";
-"16.MyFlowLayout - Regular arrangement" = "16流式布局-有规律的子视图排列";
-"17.MyFlowLayout - Tag cloud" = "17流式布局-标签流";
-"18.MyFlowLayout - Drag" = "18流式布局-子视图的拖拽调整功能";
-"19.MyFlowLayout - Weight" = "19流式布局-对线性布局的替代方案";
-"20.MyFloatLayout - Float" = "20浮动布局-浮动效果的演示";
-"21.MyFloatLayout - Jagged" = "21浮动布局-仿天猫淘宝首页实现" ;
-"22.MyFloatLayout - Card news" = "22浮动布局-仿ZAKER今日头条实现";
-"23.MyFloatLayout - Tag cloud" = "23浮动布局-标签流";
-"24.MyFloatLayout - Title & Description" = "24浮动布局-左右排列的文本";
-"25.UITableView - Dynamic height" = "25综合布局-布局和UITableView(动态高度)";
-"26.UITableView - Static height" = "26综合布局-布局和UITableView(静态高度)";
-"27.Replacement of UITableView" = "27综合布局-UITableView的替换方案";
-"28.Replacement of UICollectionView" = "28综合布局-UICollectionView的替换方案";
-"29.SizeClass - Demo1" = "29SizeClass-不同屏幕下的布局样式1";
-"30.SizeClass - Demo2" = "30SizeClass-不同屏幕下的布局样式2";
+"1.LinearLayout - Vert&Horz" = "1.线性布局-垂直布局和水平布局";
+"2.LinearLayout - Combine with UIScrollView" = "2.线性布局-和UIScrollView的结合";
+"3.LinearLayout - Gravity&Fill" = "3.线性布局-子视图的停靠和填充";
+"4.LinearLayout - Wrap content" = "4.线性布局-布局尺寸由子视图决定";
+"5.LinearLayout - Weight & Relative margin" = "5.线性布局-子视图尺寸由布局决定";
+"6.LinearLayout - Size limit & Flexed margin" = "6.线性布局-子视图之间的浮动间距";
+"7.LinearLayout - Average size&spacing" = "7.线性布局-均分子视图尺寸和间距";
+"1.FrameLayout - Gravity&Fill" = "1.框架布局-子视图在布局各方位停靠";
+"2.FrameLayout - Complex UI" = "2.框架布局-复杂的界面布局";
+"1.RelativeLayout - Constraint&Dependence" = "1.相对布局-子视图之间的约束依赖";
+"2.RelativeLayout - Prorate size" = "2.相对布局-子视图的尺寸按比例分配";
+"3.RelativeLayout - Centered" = "3.相对布局-子视图整体居中";
+"1.TableLayout - Vert" = "1.表格布局-垂直表格";
+"2.TableLayout - Waterfall(Horz)" = "2.表格布局-水平表格实现瀑布流";
+"3.TableLayout - Intelligent borderLine" = "3.表格布局-表格和智能边界线";
+"1.FlowLayout - Regular arrangement" = "1.流式布局-有规律的子视图排列";
+"2.FlowLayout - Tag cloud" = "2.流式布局-标签流";
+"3.FlowLayout - Drag" = "3.流式布局-子视图的拖拽调整功能";
+"4.FlowLayout - Weight" = "4.流式布局-对线性布局的替代方案";
+"1.FloatLayout - Float" = "1.浮动布局-浮动效果的演示";
+"2.FloatLayout - Jagged" = "2.浮动布局-仿天猫淘宝首页实现" ;
+"3.FloatLayout - Card news" = "3.浮动布局-仿ZAKER今日头条实现";
+"4.FloatLayout - Tag cloud" = "4.浮动布局-标签流";
+"5.FloatLayout - Title & Description" = "5.浮动布局-左右排列的文本";
+"1.PathLayout - Animations" = "1.路径布局-各种动画效果";
+"2.PathLayout - Curves"="2.路径布局-各种函数曲线";
+"3.PathLayout - Menu in Circle"="3.路径布局-圆环型菜单";
+"4.PathLayout - Fan"="4.路径布局-扇子效果";
+"1.UITableView - Dynamic height" = "1.综合布局-布局和UITableView(动态高度)";
+"2.UITableView - Static height" = "2.综合布局-布局和UITableView(静态高度)";
+"3.Replacement of UITableView" = "3.综合布局-UITableView的替换方案";
+"4.Replacement of UICollectionView" = "4.综合布局-UICollectionView的替换方案";
+"1.SizeClass - Demo1" = "1.SizeClass-不同屏幕下的布局样式1";
+"2.SizeClass - Demo2" = "2.SizeClass-不同屏幕下的布局样式2";
 
 //LLTest1ViewController
 "Vert(from top to bottom)" = "垂直布局(从上到下)";
