--- a/MyLayout/zh-Hans.lproj/Localizable.strings
+++ b/MyLayout/zh-Hans.lproj/Localizable.strings
@@ -33,6 +33,7 @@
 "3.FloatLayout - Card news" = "3.浮动布局-仿ZAKER今日头条实现";
 "4.FloatLayout - Tag cloud" = "4.浮动布局-标签流";
 "5.FloatLayout - Title & Description" = "5.浮动布局-左右排列的文本";
+"6.FloatLayout - User Profiles"="6.浮动布局-各种用户配置的实现";
 "1.PathLayout - Animations" = "1.路径布局-各种动画效果";
 "2.PathLayout - Curves"="2.路径布局-各种函数曲线";
 "3.PathLayout - Menu in Circle"="3.路径布局-圆环型菜单";
