--- a/MyLayout/zh-Hans.lproj/Localizable.strings
+++ b/MyLayout/zh-Hans.lproj/Localizable.strings
@@ -29,6 +29,7 @@
 "2.FlowLayout - Tag cloud" = "2.流式布局-标签流";
 "3.FlowLayout - Drag" = "3.流式布局-子视图的拖拽调整功能";
 "4.FlowLayout - Weight" = "4.流式布局-对线性布局的替代方案";
+"5.FlowLayout - Paging" = "5.流式布局-对分页滚动的支持";
 "1.FloatLayout - Float" = "1.浮动布局-浮动效果的演示";
 "2.FloatLayout - Jagged" = "2.浮动布局-仿天猫淘宝首页实现" ;
 "3.FloatLayout - Card news" = "3.浮动布局-仿ZAKER今日头条实现";
