--- a/MyLayoutDemo/zh-Hans.lproj/Localizable.strings
+++ b/MyLayoutDemo/zh-Hans.lproj/Localizable.strings
@@ -42,6 +42,11 @@
 "3.PathLayout - Menu in Circle"="3.路径布局-圆环型菜单";
 "4.PathLayout - Fan"="4.路径布局-扇子效果";
 "5.PathLayout - Roulette"="5.路径布局-转动的轮盘";
+"1.GridLayout - Row&Col gird"="1.栅格布局-实现多层视图嵌套";
+"2.GridLayout - Dynamic layout"="2.栅格布局-仿今日头条实现动态更新";
+"3.GridLayout - ViewGroup"="3.栅格布局-用视图组实现仿京东首页";
+"4.GridLayout - JSON"="4.栅格布局-用JSON语言来描述布局";
+"5.GridLayout -JSON- Test5"="5.栅格布局-测试";
 "1.UITableView - Dynamic height" = "1.综合布局-布局和UITableView(动态高度)";
 "2.UITableView - Static height" = "2.综合布局-布局和UITableView(静态高度)";
 "3.Replacement of UITableView" = "3.综合布局-UITableView的替换方案";
