--- a/MyLayoutDemo/zh-Hans.lproj/Localizable.strings
+++ b/MyLayoutDemo/zh-Hans.lproj/Localizable.strings
@@ -56,6 +56,7 @@
 "2.SizeClass - Demo2" = "2.SizeClass-不同屏幕下的布局样式2";
 "❁1.Screen perfect fit - Demo1" = "❁1.界面的完美适配DEMO";
 "❁2.Screen perfect fit - Demo2" = "❁2.界面的完美适配DEMO2";
+"❁3.UICollectionView height self-adaption" = "❁3.UICollectionView 高度自适应";
 
 //LLTest1ViewController
 "vertical(from top to bottom)" = "垂直布局(从上到下)";
