--- a/MyLayoutDemo/zh-Hans.lproj/Localizable.strings
+++ b/MyLayoutDemo/zh-Hans.lproj/Localizable.strings
@@ -112,6 +112,7 @@
 "space" = "间距调整";
 "between" = "间距拉伸";
 "around" = "间距环绕";
+"among" = "间距等分";
 "test text1"="测试文本1";
 "always alignment to left"="总是停靠在左边";
 "always alignment to top"="总是停靠在上边";
@@ -181,7 +182,8 @@
 "adjust horz gravity"="填充水平停靠";
 "adjust vert gravity"="调整垂直停靠";
 "adjust align"="调整对齐方式";
-"adjust spacing"="调整间隔";
+"adjust spacing"="调整间距";
+"adjust gravity policy"="调整拉伸策略";
 
 //FLLTest2ViewController
 "click to remove tag"="点击标签可删除";
